# jupyter-manager

./: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  environment.yml  hatch_build.py  install.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js  webpack.lab-config.js
.github/workflows/: build.yml  check-release.yml
dev/: README.md
dev/config/: README.md  jupyter_server_config.py  jupyterhub_config.py
dev/notebooks/: README.md
dev/sh/: fix-yarn.sh  kill.sh  start-jupyter-server.sh
docs/: Makefile  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/: index.mdx
docs/docs/develop/: index.mdx
docs/src/components/: HomepageFeatures.js  HomepageProducts.js
docs/src/css/: custom.css
docs/src/pages/: index.js
jupyter-config/nb-config/: jupyter_manager.json
jupyter-config/server-config/: jupyter_manager.json
jupyter_manager/: __init__.py  __main__.py  application.py  generate_config.py  handlers.py  load_config.py  server_config.py  server_extensions.py  serverapplication.py  shim_config.py
jupyter_manager/__tests__/: test_generate_config.py  test_load_config.py
jupyter_manager/config/: __init__.py  generate_config.py  load_config.py  shim_config.py
jupyter_manager/extensions/: __init__.py  server_extensions.py
jupyter_manager/handlers/: base.py
jupyter_manager/handlers/config/: handler.py
jupyter_manager/handlers/docker/: handler.py
jupyter_manager/handlers/echo/: handler.py
jupyter_manager/handlers/manager/: handler.py
jupyter_manager/handlers/ping/: handler.py
jupyter_manager/handlers/proxy/: handler.py
jupyter_manager/handlers/relay/: handler.py
jupyter_manager/static/: README.md
jupyter_manager/templates/: index.html
jupyter_manager/tests/: __init__.py  test_extensions.py  test_generate_config.py  test_handlers.py  test_load_config.py  test_server_extensions.py  test_shim_config.py
public/: index.html
schema/: plugin.json
src/: App.tsx  Manager.tsx  ManagerApp.tsx  ManagerJupyterLab.tsx  ManagerJupyterLabHeadless.tsx  index.ts  typings.d.ts  widget.tsx
src/__tests__/: manager.spec.ts
src/api/: connectionConfigs.ts  hubHandler.ts  jupyterHubAPI.ts  serverHandler.ts  withAPI.ts  withHubAPI.ts
src/components/: Breadcrumbs.tsx  HubSidebar.tsx  Manager.tsx  Messages.tsx  Navbar.tsx
src/components/Breadcrumbs/: index.tsx
src/components/HubSidebar/: index.tsx
src/components/Messages/: index.tsx
src/components/Navbar/: Navbar.tsx  index.tsx
src/components/ObjectTableViewer/: index.tsx
src/components/about/: AboutManager.tsx
src/jupyter/: App.tsx  Config.ts  Manager.tsx  Store.ts
src/jupyter/hub/: Store.js  (+3 more)
src/jupyterlab/: index.ts  widget.tsx
src/redux/: store2.ts
style/: base.css
style/jupyterhub/: group-select.css  pagination-footer.css  server-dashboard.css  table-select.css
ui-tests/: package.json
ui-tests/tests/: datalayer.spec.ts
(+119 files in other folders)
