[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab==4.0.10", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyter_manager"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "datalayer",
    "jupyter_server>=2.0,<3",
    "jupyterlab==4.0.10",
    "genson"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.scripts]
jupyter-manager = "jupyter_manager.appplication:main"
jupyter-manager-server = "jupyter_manager.serverapplication:main"

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync",
    "pytest_jupyter"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build]
artifacts = [
  "jupyter_manager/static",
  "jupyter_manager/templates"
]

[tool.hatch.build.hooks.custom]

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_manager/labextension"]
exclude = [".github", "binder", ".yarn"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_manager/labextension" = "share/jupyter/labextensions/@datalayer/jupyter-manager"
"install.json" = "share/jupyter/labextensions/@datalayer/jupyter-manager/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.hooks.version]
path = "jupyter_manager/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_manager/labextension/static/style.js",
    "jupyter_manager/labextension/package.json",
]
skip-if-exists = ["jupyter_manager/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_manager/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
